fix button alignment

--- a/src/app/components/hangman/hangman.component.scss
+++ b/src/app/components/hangman/hangman.component.scss
@@ -21,7 +21,7 @@
 
   button {
     padding: 10px 20px;
-    margin: 10px;
+    margin: 10px 10px 10px 0;
     font-size: 1em;
     border: none;
     border-radius: 4px;
